// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appendResidues (C5H5O)IleLeuAspAspLeuCys(C26H30N2OSi)AlaAsnGlnLeuGlnProLeuLeuLeuLysOH 1`] = `
{
  "residues": {
    "all": [
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "begin",
        "label": "Nter",
      },
      {
        "fromBegin": 1,
        "fromEnd": 16,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "I",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ile",
      },
      {
        "fromBegin": 2,
        "fromEnd": 15,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 3,
        "fromEnd": 14,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "D",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Asp",
      },
      {
        "fromBegin": 4,
        "fromEnd": 13,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "D",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Asp",
      },
      {
        "fromBegin": 5,
        "fromEnd": 12,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 6,
        "fromEnd": 11,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "ς",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Cys(C26H30N2OSi)",
      },
      {
        "fromBegin": 7,
        "fromEnd": 10,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 8,
        "fromEnd": 9,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "N",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Asn",
      },
      {
        "fromBegin": 9,
        "fromEnd": 8,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "Q",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Gln",
      },
      {
        "fromBegin": 10,
        "fromEnd": 7,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 11,
        "fromEnd": 6,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "Q",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Gln",
      },
      {
        "fromBegin": 12,
        "fromEnd": 5,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "P",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Pro",
      },
      {
        "fromBegin": 13,
        "fromEnd": 4,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 14,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 15,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 16,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "K",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Lys",
      },
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "end",
        "label": "OH",
      },
    ],
    "alternatives": {
      "ς": {
        "count": 1,
      },
    },
    "begin": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "begin",
      "label": "Nter",
    },
    "end": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "end",
      "label": "OH",
    },
    "replacements": {
      "C5H5O": {
        "label": "Nter",
      },
      "Cys(C26H30N2OSi)": {
        "label": "ς",
        "modification": "C26H30N2OSi",
        "residue": "Cys",
      },
    },
    "residues": [
      {
        "fromBegin": 1,
        "fromEnd": 16,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "I",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ile",
      },
      {
        "fromBegin": 2,
        "fromEnd": 15,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 3,
        "fromEnd": 14,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "D",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Asp",
      },
      {
        "fromBegin": 4,
        "fromEnd": 13,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "D",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Asp",
      },
      {
        "fromBegin": 5,
        "fromEnd": 12,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 6,
        "fromEnd": 11,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "ς",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Cys(C26H30N2OSi)",
      },
      {
        "fromBegin": 7,
        "fromEnd": 10,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 8,
        "fromEnd": 9,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "N",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Asn",
      },
      {
        "fromBegin": 9,
        "fromEnd": 8,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "Q",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Gln",
      },
      {
        "fromBegin": 10,
        "fromEnd": 7,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 11,
        "fromEnd": 6,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "Q",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Gln",
      },
      {
        "fromBegin": 12,
        "fromEnd": 5,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "P",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Pro",
      },
      {
        "fromBegin": 13,
        "fromEnd": 4,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 14,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 15,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "L",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Leu",
      },
      {
        "fromBegin": 16,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "K",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Lys",
      },
    ],
  },
}
`;

exports[`appendResidues (MeO)AA(H-1NH2)AA rna 1`] = `
{
  "residues": {
    "all": [
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "begin",
        "label": "5'",
      },
      {
        "fromBegin": 1,
        "fromEnd": 4,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Amp",
      },
      {
        "fromBegin": 2,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Amp(H-1NH2)",
      },
      {
        "fromBegin": 3,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Amp",
      },
      {
        "fromBegin": 4,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Amp",
      },
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "end",
        "label": "H",
      },
    ],
    "alternatives": {
      "α": {
        "count": 1,
      },
    },
    "begin": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "begin",
      "label": "5'",
    },
    "end": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "end",
      "label": "H",
    },
    "replacements": {
      "Amp(H-1NH2)": {
        "label": "α",
        "modification": "H-1NH2",
        "residue": "Amp",
      },
      "MeO": {
        "label": "5'",
      },
    },
    "residues": [
      {
        "fromBegin": 1,
        "fromEnd": 4,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Amp",
      },
      {
        "fromBegin": 2,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Amp(H-1NH2)",
      },
      {
        "fromBegin": 3,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Amp",
      },
      {
        "fromBegin": 4,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Amp",
      },
    ],
  },
}
`;

exports[`appendResidues AA(Ph)A(Ph)A(Ts)A(Ph)U 1`] = `
{
  "residues": {
    "all": [
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "begin",
        "label": "H",
      },
      {
        "fromBegin": 1,
        "fromEnd": 6,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 2,
        "fromEnd": 5,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(Ph)",
      },
      {
        "fromBegin": 3,
        "fromEnd": 4,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(Ph)",
      },
      {
        "fromBegin": 4,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "¹α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(Ts)",
      },
      {
        "fromBegin": 5,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(Ph)",
      },
      {
        "fromBegin": 6,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "Θ",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Sec",
      },
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "end",
        "label": "OH",
      },
    ],
    "alternatives": {
      "α": {
        "count": 2,
      },
    },
    "begin": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "begin",
      "label": "H",
    },
    "end": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "end",
      "label": "OH",
    },
    "replacements": {
      "Ala(Ph)": {
        "label": "α",
        "modification": "Ph",
        "residue": "Ala",
      },
      "Ala(Ts)": {
        "label": "¹α",
        "modification": "Ts",
        "residue": "Ala",
      },
      "Sec": {
        "id": "Sec",
        "label": "Θ",
      },
    },
    "residues": [
      {
        "fromBegin": 1,
        "fromEnd": 6,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 2,
        "fromEnd": 5,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(Ph)",
      },
      {
        "fromBegin": 3,
        "fromEnd": 4,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(Ph)",
      },
      {
        "fromBegin": 4,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "¹α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(Ts)",
      },
      {
        "fromBegin": 5,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(Ph)",
      },
      {
        "fromBegin": 6,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "Θ",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Sec",
      },
    ],
  },
}
`;

exports[`appendResidues ForAlaAla(H-1OH)AlaOH 1`] = `
{
  "residues": {
    "all": [
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "begin",
        "label": "5'",
      },
      {
        "fromBegin": 1,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 2,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(H-1OH)",
      },
      {
        "fromBegin": 3,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "end",
        "label": "OH",
      },
    ],
    "alternatives": {
      "α": {
        "count": 1,
      },
    },
    "begin": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "begin",
      "label": "5'",
    },
    "end": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "end",
      "label": "OH",
    },
    "replacements": {
      "Ala(H-1OH)": {
        "label": "α",
        "modification": "H-1OH",
        "residue": "Ala",
      },
      "For": {
        "label": "5'",
      },
    },
    "residues": [
      {
        "fromBegin": 1,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 2,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(H-1OH)",
      },
      {
        "fromBegin": 3,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
    ],
  },
}
`;

exports[`appendResidues H(+)AlaAla(H-1OH)AlaOH 1`] = `
{
  "residues": {
    "all": [
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "begin",
        "label": "5'",
      },
      {
        "fromBegin": 1,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 2,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(H-1OH)",
      },
      {
        "fromBegin": 3,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "end",
        "label": "OH",
      },
    ],
    "alternatives": {
      "α": {
        "count": 1,
      },
    },
    "begin": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "begin",
      "label": "5'",
    },
    "end": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "end",
      "label": "OH",
    },
    "replacements": {
      "Ala(H-1OH)": {
        "label": "α",
        "modification": "H-1OH",
        "residue": "Ala",
      },
      "H(+)": {
        "label": "5'",
      },
    },
    "residues": [
      {
        "fromBegin": 1,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 2,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(H-1OH)",
      },
      {
        "fromBegin": 3,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
    ],
  },
}
`;

exports[`appendResidues HAlaAla(H-1OH)AlaOH 1`] = `
{
  "residues": {
    "all": [
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "begin",
        "label": "H",
      },
      {
        "fromBegin": 1,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 2,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(H-1OH)",
      },
      {
        "fromBegin": 3,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "end",
        "label": "OH",
      },
    ],
    "alternatives": {
      "α": {
        "count": 1,
      },
    },
    "begin": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "begin",
      "label": "H",
    },
    "end": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "end",
      "label": "OH",
    },
    "replacements": {
      "Ala(H-1OH)": {
        "label": "α",
        "modification": "H-1OH",
        "residue": "Ala",
      },
    },
    "residues": [
      {
        "fromBegin": 1,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 2,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "α",
        "replaced": true,
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala(H-1OH)",
      },
      {
        "fromBegin": 3,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
    ],
  },
}
`;

exports[`appendResidues HAlaAlaAlaOH 1`] = `
{
  "residues": {
    "all": [
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "begin",
        "label": "H",
      },
      {
        "fromBegin": 1,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 2,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 3,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "end",
        "label": "OH",
      },
    ],
    "alternatives": {},
    "begin": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "begin",
      "label": "H",
    },
    "end": {
      "info": {
        "nbOver": 0,
        "nbUnder": 0,
      },
      "kind": "end",
      "label": "OH",
    },
    "replacements": {},
    "residues": [
      {
        "fromBegin": 1,
        "fromEnd": 3,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 2,
        "fromEnd": 2,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
      {
        "fromBegin": 3,
        "fromEnd": 1,
        "info": {
          "nbOver": 0,
          "nbUnder": 0,
        },
        "kind": "residue",
        "label": "A",
        "results": {
          "begin": [],
          "end": [],
        },
        "value": "Ala",
      },
    ],
  },
}
`;
